@@ -5,7 +5,7 @@ bundle_id = org.laptop.Chat
 service_name = org.laptop.Chat
 class = pippy_app.Chat
 icon = activity-icon
-activity_version = 41
+activity_version = 42
 mime_types = 
 show_launcher = yes
 host_version = 1
