@@ -1,7 +1,12 @@
+42
+
+* #6036: Show timestamp as elapsed time instead of date (morgs)
+* Updated translations: fr, mvo, pis, af, sd, pap, tpi, ar, de
+
 41
 
 * Updated translations: mr, de, ht, km, es, it
-* #6035: Add separator after old chat history (morgs)
+* #6036: Add separator after old chat history (morgs)
 * #6298: Implement 1-1 private chat with non Sugar Jabber clients (morgs)
 
 40
